--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -11,7 +11,6 @@
             Novo
         </ng-template>
         <mat-card>
-            <mat-card-title>Cadastro</mat-card-title>
             <form>
                 <mat-form-field class="full-width">
                     <mat-label>Primeiro Nome: </mat-label>
@@ -115,7 +114,7 @@
                 <ng-container matColumnDef="deleteCustomer">
                     <th mat-header-cell *matHeaderCellDef> Excluir </th>
                     <td mat-cell *matCellDef="let customer">
-                        <a href="#" (click)="deleteCustomer(customer)">
+                        <a href="#" routerLink="customer" (click)="deleteCustomer(customer)">
                             <mat-icon>delete-forever</mat-icon>
                         </a>
                     </td>
@@ -124,7 +123,7 @@
                 <ng-container matColumnDef="findCustomer">
                     <th mat-header-cell *matHeaderCellDef> Alterar </th>
                     <td mat-cell *matCellDef="let customer">
-                        <a href="#" (click)="tabGroup.selectedIndex=0;findCustomer(customer);">
+                        <a href="#" routerLink="customer" (click)="tabGroup.selectedIndex=0;findCustomer(customer);">
                             <mat-icon>mode_edit</mat-icon>
                         </a>
                     </td>
