product-category-editing-working

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -119,7 +119,7 @@
                 </mat-option>
               </mat-select>
             </mat-form-field>
-            <button (click)="product.idProduct ? editProduct() : saveProduct()" mat-raised-button color="primary">
+            <button (click)="saveProduct()" mat-raised-button color="primary">
               Salvar
             </button>
           </div>
